--- a/src/layouts/Default.css
+++ b/src/layouts/Default.css
@@ -4,6 +4,11 @@
 
 @tailwind utilities;
 
+html,
+body {
+  font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, emoji;
+}
+
 .container {
   @apply px-5 mx-auto;
 
@@ -11,11 +16,20 @@
   max-width: 1136px;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   @apply font-semibold;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   @apply pb-2;
 }
 
