Clean up template and site-data

--- a/src/components/PostPreview/PostPreview.css
+++ b/src/components/PostPreview/PostPreview.css
@@ -1,15 +1,14 @@
-.PostPreview--Article--ReadMore {
-}
+.PostPreview--Article--ReadMore {}
 
 .PostPreview--Article--ReadMore::before {
-  content: '';
+  content : '';
   position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
+  height  : 100%;
+  width   : 100%;
+  top     : 0;
+  left    : 0;
 }
 
 .PostPreview--Article:hover {
-  @apply bg-gray-600;
+  @apply bg-blue-500;
 }
